--- a/style.css
+++ b/style.css
@@ -1,65 +1,39 @@
-body{
-    font-family:Arial, sans-serif;
-    background-color:black;
-    color: #C9d1D9;
+div{
+    right:30px;
+    border:5px solid greenyellow;
 }
 
-h1{
+div.fixed{
+    position: fixed;
+    top:20px;
+    right:60x;
+    width:300px;
+    border:5px solid khaki;
+    background-color: cornflowerblue;
     color: black;
-    background-color: white;
+    padding: 5px;
+    
 }
 
-/* Attribute Selector */
-a{
-    color: red;
+div.sticky{
+    position: sticky;
+    top:1px;
+    left:50px;
+    width:300px;
+    border:5px solid pink;
+    background-color: chartreuse;
+    color: black;
+    padding:5px;
 }
 
-a:hover{
-    color: #1F6FEB;
-}
-
-
-/* Child Selector */
-ul>li {
-    font-weight:bold;
-    font-style:italic;
-    font-family:cursive;
-    font-family:20px;
-}
-
-/* Sibling Selector */
-
-/* :hover Pseudo-Class */
-ul li :hover{
-    color: orangered;
-} 
-
-
-/* :nth child(n) Pseudo-Class */
-
-ul li:nth-child(3){
-    background-color: rgb(135, 61, 255);
-}
-
-
-ul li::after{
-content: "🚀 ";
-}
-/* ::after Pseudo element */
-a::before{
-    content: " 🌌";
+div.relative{
+    position:relative;
+    left:100px;
+    border:5px solid mediumpurple;
+    background-color: palevioletred;
 
 }
 
-
-
-
-/* ::First-letter Pseudo-Class*/
-
-p::first-letter{
-    font-size:200%;
-    color:#FF7B72;
+div.absolute{
+    border:5 px solid black;
 }
-
-
-
